changed margin to padding, to fix issue on mobile devices

--- a/css/diarydash.css
+++ b/css/diarydash.css
@@ -56,8 +56,8 @@ body {
 
 #user-text {
 	/* Size/Padding/Margin */
-	margin:0 0 0 1em;
-	padding: 0em 0em 0em 0em;
+	margin:0 0 0 0;
+	padding: 0em 1em 0em 1em;
 	width: 100%;
 
 	/* Font */
